# mwe

./: .bash_profile  .bashrc  .bupthrc  .exrc  .git_bupthrc  .gitconfig  .gitignore  .gvimrc  .inputrc  .profile  .tmux.conf  .umlauts  .vimrc  Makefile  README.md  README.mdown  proxy-settings  standard.tmux
Makefiles/: deploy.makefile  make.deploy  make.md-raid  md-raid.makefile
Makefiles/md-raid/: Makefile  md42.service
perl/: cpufrex-set-governor  filter-messages  frex  gurgle  pus
python/: asleeps.py  cpufrex-set-governor.py  dice.py  frex.py  get-latest-tagesschau.py  naime.py  nd.py  rd.py  roll_dice.py  wanip.py  wanipz.py  xsx4xnxfx.py
python/dice/: README.rst  pyproject.toml
python/dice/src/dice/: __init__.py  dice.py  functions.py
python/dice/tests/: test_dice.py
python/filtermessages/: pyproject.toml
python/filtermessages/tests/: test_burden.py
python/lsattr/: pyproject.toml
python/lsattr/tests/: test_lsattr.py
python/ncrvi/: pyproject.toml
python/ncrvi/tests/: test_ncrvi.py
python/ndrd/: pyproject.toml
python/nproc/: pyproject.toml
python/nproc/tests/: test_nproc.py
python/ooce/: pyproject.toml
python/ooce/tests/: test_exceptions.py
python/pathorstr/: __init__.py  pyproject.toml
python/pathorstr/tests/: test_pathorstr.py
python/requiresthat/: README.rst  pyproject.toml
python/requiresthat/tests/: test_requiresthat.py
python/runmwe/: pyproject.toml
python/runmwe/tests/: test_mwerunner.py
python/support/: lsattr.py  wanip.py
python/wanip/: README.rst  pyproject.toml
python/yacd/: pyproject.toml
(+62 files in other folders)
